@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11174 2005/09/22 15:38:01 tron Exp $
+$NetBSD: CHANGES,v 1.11175 2005/09/22 15:55:09 rillig Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4085,3 +4085,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated lang/sablevm to 1.1.3nb7 [wiz 2005-09-22]
 	Updated mail/mutt to 1.4.2.1nb4 [tron 2005-09-22]
 	Updated news/inn to 2.4.1nb8 [tron 2005-09-22]
+	Updated pkgtools/pkglint to 4.21.3 [rillig 2005-09-22]
